--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dwolla-v2": "^3.4.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-206df66e-20240912",
     "lucide-react": "^0.400.0",
     "next": "^14.2.8",
     "node-appwrite": "^13.0.0",
+    "plaid": "^27.0.0",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-plaid-link": "^3.6.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
